--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>InkWave Copywriting | Home</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-94F2J7FTNN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-94F2J7FTNN');
+</script>
+
 </head>
 <body>
   <!-- Preloader -->
